Version 0.5
===========
- Display the errors from the logs in case of a failure

Version 0.4
===========
- Manual page is generated now from the help page

- Added snapshotting operations

Version 0.3
===========
- Larger test suite

- Cleanups and Javadoc API

- Fix receival of closures

- Added basic HTTP authentication support

Version 0.2
===========
- Renamed from DisnixService