@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
-.TH DISNIX-SOAP-CLIENT "1" "January 2016" "disnix-soap-client (DisnixWebService 0.4)" "User Commands"
+.TH DISNIX-SOAP-CLIENT "1" "January 1970" "disnix-soap-client (DisnixWebService 0.6)" "User Commands"
 .SH NAME
 disnix-soap-client \- Provides access to the disnix-service through the SOAP protocol
 .SH SYNOPSIS
@@ -106,6 +106,10 @@ absolute paths
 \fB\-\-clean\-snapshots\fR
 Removes older snapshots from the snapshot store
 .TP
+\fB\-\-capture\-config\fR
+Captures the configuration of the machine from the
+Dysnomia container properties in a Nix expression
+.TP
 \fB\-\-help\fR
 Shows the usage of this command to the user
 .TP
@@ -146,6 +150,11 @@ used, such as echo or process.
 \fB\-\-arguments\fR=\fI\,ARGUMENTS\/\fR
 Specifies the arguments passed to the Dysnomia
 module, which is a string with key=value pairs
+.TP
+\fB\-\-container\fR=\fI\,CONTAINER\/\fR
+Name of the container in which the component is
+managed. If omitted it will default to the same
+value as the type.
 .SS "Query all snapshots/Query latest snapshot options:"
 .TP
 \fB\-C\fR, \fB\-\-container\fR=\fI\,CONTAINER\/\fR
